# martingale-scheduling

./: .flake8  .gitignore  Dockerfile  Feasible_Application.xlsx  Minimum_Application_Data.xlsx  README.md  build.sh  classes.py  config.yaml  docker-compose.yml  experimenting.py  gen_spaces_test.xlsx  interviews.ics  matching.py  mypi.ini  prototype.py  pymatching_test.py  pyproject.toml  requirements.txt  setup.cfg  test_sample.py  utilities.py
app/: main.py  models.py  schema.py  tasks.py
data/: 20_applicants.xlsx  Application_Form_Data.xlsx  Minimum_Assessor_Data.xlsx  Scholarship_Assessor_Data.xlsx  academic_assessors_20.xlsx  academic_assessors_35.xlsx  academic_assessors_70.xlsx  locations.xlsx  scholarship_candidates.xlsx  scholarship_candidates_min.xlsx  scholarship_candidates_pen.xlsx
data/test/: Copy (1)scholarship_candidates_20.xlsx  Feasible_Assessor.xlsx  academic_assessors_min.xlsx
neonvenv/: pyvenv.cfg
neonvenv/Scripts/: activate  activate.bat
output/: clean_interviews.ics  data_interviews.ics  interviews.ics
src/scheduler/: cli.py  config.py  core.py  paths.py  prototype.py  scheduler.toml
src/scheduler/libs/: classes.py  experimenting.py  minimal_test.py  ortools_test.py  utilities.py
tests/: test_main.py  test_sample.py
tests/data/: Application_Form_Data.xlsx  Scholarship_Assessor_Data.xlsx  gen_spaces_test.xlsx
