[metadata]
name = martingale-scheduling
version = 0.1.0
description = Scheduling tool for Martingale
author = Neontribe Ltd

[options]
package_dir =
    = src
packages = find:
install_requires =
    typer
    pydantic[dotenv]
    PyYAML
    openpyxl
    ortools
    pandas
    icalendar

[options.entry_points]
console_scripts =
    scheduler = scheduler.cli:app
